# polygons

./: .gitignore  .travis.yml  .zenodo.json  CMakeLists.txt  Cargo.toml  README.md  README.rst  VERSION  benchmark.py  polygon.txt  requirements.txt  setup  setup.py  test.py
.github/workflows/: package-crates.yml  package-pypi.yml  package.yml  test.yml
cmake/: autocmake.yml
cmake/custom/: c++11.cmake  src.cmake
example/: example.py
polygon/: CMakeLists.txt  __init__.py  distance.cpp  distance.h  helpers.cpp  intersection.h  polygon.cpp  polygon.h
polygons/: CMakeLists.txt  __init__.py  custom_functions.cpp  custom_functions.h  debug.cpp  distance.cpp  distance.h  edge.h  functions.cpp  functions.h  intersection.cpp  intersection.h  node.cpp  node.h  point.h  polygons.cpp  polygons.h
src/: distance.rs  edge.rs  intersection.rs  intersections.rs  io.rs  lib.rs  main.rs  node.rs  point.rs  py.rs  python.rs  structures.rs  stuff.rs  tree.rs
tests/: integration_test.rs  islands.txt  rectangle.txt  test.py
tests/case-1/reference/: distances_nearest_edges.txt  distances_nearest_vertices.txt  reference_points.txt
tests/case-2/: boundary.txt
tests/case-2/reference/: points_are_inside.txt  reference_points.txt
tests/plot/: plot.py  requirements.txt  run.sh
tests/reference/: closest_indices.txt  distances_nearest_edges.txt  distances_nearest_vertices.txt  points_are_inside.txt  reference_points.txt
