[package]
name = "polygons"
version = "0.3.1"
authors = ["Radovan Bast <bast@users.noreply.github.com>"]
description = "Fast points-in-polygon test and distances to polygons."
license = "GPL-3.0-only"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/bast/polygons"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

default = ["rayon", "pyo3"]

[package.metadata.maturin]
requires-python = ">=3.6"
classifier = ["Programming Language :: Python"]

[dependencies]
rayon = { version = "1.7", optional = true }
pyo3 = { version = "0.19", features = ["extension-module"], optional = true }

[dev-dependencies]
rand = "0.8"
