[package]
name = "polygons"
version = "0.3.4"
authors = ["Radovan Bast <bast@users.noreply.github.com>"]
description = "Fast points-in-polygon test and distances to polygons."
license = "GPL-3.0-only"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/bast/polygons"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

default = ["rayon", "pyo3"]

[dependencies]
rayon = { version = "1.10.0", optional = true }
pyo3 = { version = "0.24.0", features = ["extension-module"], optional = true }
float-cmp = "0.10.0"

[dev-dependencies]
rand = "0.9.0"
